test/conformance/chainsaw/exceptions/exclude-ephemeral-containers/excluded-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      runAsNonRoot: false
