test/conformance/chainsaw/exceptions/exclude-ephemeral-containers/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-nonroot
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
